<resources>
    <!--Hardcoding, colocar valores estaticos-->
    <string name="app_name">Login4A</string>
    <string name="str_iniciar">Iniciar Sesión</string>
    <string name="str_contraseña">¿Olvidaste tu Contraseña?</string>
    <string name="h_contraseña">Contraseña</string>
    <string name="h_usuario">Usuario</string>
    <string name="lb_personaje">Bob Esponja</string>
    <string name="chk_question">¿Te gusta Bob Esponja?</string>
    <string name="rb_ch1">Calamardo Tentáculos</string>
    <string name="rb_ch2">Patricio Estrella</string>
    <string name="str_aceptar">Aceptar</string>

    <string name="str_usu" translatable="false">Usuario</string>
    <string name="str_pass" translatable="false">Contraseña</string>
    <string name="str_login" translatable="false">Iniciar Sesión</string>
    <string name="str_forgot" translatable="false">¿Olvidaste tu Contraseña?</string>
</resources>